--- a/views/index.hbs
+++ b/views/index.hbs
@@ -184,6 +184,51 @@
     
         </div>
 
+        <div class="mainTitle">
+            <h1>Our projects</h1>
+            <p>We have completed many projects, especially in civil construction and glass installation.</p>
+        </div> 
+        
+        <div class="slider">
+            <div class="slides">
+    
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+                <input type="radio" name="radio-btn" id="radio4">
+    
+                <div class="slide first">
+                    <img src="/images/7.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/images/8.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/images/9.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="/images/11.jpg" alt="">
+                </div>
+    
+                <div class="navigation-auto">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                </div>
+    
+            </div>
+            
+            <div class="navigation-manual">
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio2" class="manual-btn"></label>
+                <label for="radio3" class="manual-btn"></label>
+                <label for="radio4" class="manual-btn"></label>
+            </div>
+    
+    
+        </div>
+
     </content>
 
     
