--- a/public/styles.css
+++ b/public/styles.css
@@ -179,7 +179,7 @@ section {
     width: 100%;
     justify-content: center;
     align-items: center;
-    
+    position: relative;
 }
 
 .carousel-slide {
