Mobile browser test

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -96,7 +96,7 @@
 
                 <section2>
                     <div class="hero3">
-                        <img src="/images/white-building-full.pngg" alt="">
+                        <img src="/images/white-building-full.png" alt="">
                         <div class="headline2">
                             <h1>Desire</h1>
                             <p>We are a family of great people, driven by our desire to make great apparel available to everyone in a sustainable way.</p>
@@ -107,7 +107,7 @@
 
                 <section2>
                     <div class="hero4">
-                        <img src="/images/white-building-full.pngg" alt="">
+                        <img src="/images/white-building-full.png" alt="">
                         <div class="headline2">
                             <h1>Inspiring</h1>
                             <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
