--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,9 @@
     padding:0;
     box-sizing: border-box;
     font-family: 'IBM Plex Sans', sans-serif;
+}
+
+body {
     overflow-x: hidden;
 }
 
