Fix horizontal scroll bar mobile

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -130,10 +130,10 @@
             <p>We specialise in enabling digital marketing ecosystems, branded content production and user experience design.</p>
         </div> 
 
-    <div class="backgroundSliderDiv">
+    {{!-- <div class="backgroundSliderDiv">
         <div class="backgroundSliderLeft"></div>
         <div class="backgroundSliderRight"></div>
-    </div>
+    </div> --}}
 
     <div class="small-container">
 
@@ -529,10 +529,6 @@
                         <li><a href="/help-and-information">Track Order</a></li>
                         <li><a href="/help-and-information">Help</a></li>
                     </ul>
-                    {{!-- <div class="app-logo">
-                        <img src="images/playstore.png">
-                        <img src="images/appstore.png">
-                    </div> --}}
                 </div>
                 <div class="footer-col-2">
                     <img src="images/Colourtagged_logo_white.svg"><p>Live with comfort.</p></img>
