--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,16 +10,21 @@
     <script src="/jquery.js"></script>
     <script src="/lightslider.js"></script>
 
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
 
         <div class="navbar">
             <div class="container_logo">
+                <img src="/images/buttergunLogo.svg">
                 <h3>Buttergun</h3>
             </div>
             <nav>
@@ -33,7 +38,7 @@
                     </ul>
                 </div>
             </nav>
-            <div class="topButton">
+            <div id="topButton" class="modal-open" data-modal="modal1">
                 <p>Get free quote</p>
             </div>
             <img src="/images/menu.svg" class="menu-icon" onclick="menutoggle()">
@@ -41,12 +46,13 @@
 
     <header>
 
-        <div class="backgroundSlider"></div>
+        {{!-- <div class="backgroundSlider"></div> --}}
 
         {{!-- <div class="backgroundSlider2"></div> --}}
 
         <div class="slider3Container">
         <div class="slider3">
+            <div class="textPosition">
             <div class="slides3">
     
                 <input type="radio" name="radio-btn3" id="radioThree1">
@@ -59,7 +65,7 @@
                     <div class="headline2">
                             <h1>Create your dream</h1>
                             <p>We are Buttergun Consortium. We build houses and run civil construction projects. We are a trusted contractor with skills, supplies, and talents. Let us turn your dream projects into reality. </p>
-                            <button class="button">Get free quote now &#8658;</button>
+                            <button class="modal-open" data-modal="modal1">Get free quote now &#8658;</button>
                     </div>
                 </div>
                 <div class="slide3">
@@ -92,6 +98,40 @@
         </div>
         </div>
         </div>
+        </div>
+
+                <div class="modal" id="modal1">
+                    <div class="modal-content">
+
+                            <div class="containerEmail2">
+                                <div class="closebuttonposition">
+                                    <button class="icon modal-close"><i class="material-icons">close</i></button>
+                                </div>
+                                <h2>Send any of your inquiry, we will build your idea</h2>
+                                <form action="https://formspree.io/f/mbjqqlaz" method="POST" id="my-form">
+                                    <div class="form-group">
+                                        <label for="name">Name</label>
+                                        <input type="text" id="name" name="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="phoneNumber">Phone number</label>
+                                        <input type="text" id="phoneNumber" name="phoneNumber">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email">Email</label>
+                                        <input type="email" id="email" name="email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="message">Message</label>
+                                        <textarea name="message" id="message" cols="30" rows="5"></textarea>
+                                    </div>
+                                    <button type="submit">Submit</button>
+                                    <div id="status"></div>
+                                </form>
+                            </div>
+
+                    </div>
+                </div>
 
 <div class="small-container">
 
@@ -187,14 +227,13 @@
 
 
 
-
+    <div class="ourServices">
 
         <div class="mainTitle">
             <h1>Our services</h1>
             <p>We provide glass installation, building construction, renovation, civil construction</p>
         </div> 
         
-        <div class="paddingSpacing">
 
         <div class="lightSliderDiv3">
 
@@ -242,11 +281,12 @@
 
         </ul>
 
-    </div> 
     </div>
+
+    </div>
+
         
-        <div class="paddingSpacing">
-        <div class="slider">
+        {{!-- <div class="slider">
             <div class="slides">
     
                 <input type="radio" name="radio-btn" id="radio1">
@@ -300,16 +340,68 @@
             </div>
     
     
-        </div>
-        </div>
+        </div> --}}
+
+        <div class="ourVision">
 
         <div class="mainTitle">
-            <h1>Our Mission</h1>
+            <h1>Our vision</h1>
             <p>We have completed many projects, especially in civil construction and glass installation.</p>
         </div> 
         
-        <div class="paddingSpacing">
-        <div class="slider2">
+
+        <div class="lightSliderDiv3">
+
+        <ul id="responsive4" class="cs-hidden">
+
+            <li class="item-a">
+                <div class="box2">
+                    <img src="/images/7.jpg" alt="">
+                    <div class="headline3">
+                        <h1>Glass installation</h1>
+                        <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
+                    </div>
+                </div>
+            </li>
+
+            <li class="item-b">
+                <div class="box2">
+                    <img src="/images/7.jpg" alt="">
+                    <div class="headline3">
+                        <h1>Glass installation</h1>
+                        <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
+                    </div>
+                </div>
+            </li>
+
+            <li class="item-c">
+                <div class="box2">
+                    <img src="/images/7.jpg" alt="">
+                    <div class="headline3">
+                        <h1>Glass installation</h1>
+                        <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
+                    </div>
+                </div>
+            </li>
+
+            <li class="item-d">
+                <div class="box2">
+                    <img src="/images/7.jpg" alt="">
+                    <div class="headline3">
+                        <h1>Glass installation</h1>
+                        <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
+                    </div>
+                </div>
+            </li>
+
+        </ul>
+
+    </div>
+
+    </div>
+        
+
+        {{!-- <div class="slider2">
             <div class="slides2">
     
                 <input type="radio" name="radio-btn2" id="radioTwo1">
@@ -347,17 +439,17 @@
             </div>
     
     
-        </div>
-        </div>
+        </div> --}}
 
 {{!-- light slider start--------------------------------------- --}}
 
-        <div class="mainTitle">
-            <h1>Our Projects</h1>
-            <p>We specialise in enabling digital marketing ecosystems, branded content production and user experience design.</p>
-        </div> 
+    <div class="ourProjects">
 
-    <div class="paddingSpacing">
+    <div class="mainTitle">
+        <h1>Our projects</h1>
+        <p>We specialise in enabling digital marketing ecosystems, branded content production and user experience design.</p>
+    </div> 
+
     <div class="lightSliderDiv">
 
         <ul id="responsive" class="cs-hidden">
@@ -454,23 +546,37 @@
 
         </ul>
 
-    </div>    
+    </div>
+
+    </div>
+
+    <div class="maps">
+
+    <div class="mainTitle">
+        <h1>Find us now!</h1>
+        <p>We specialise in enabling digital marketing ecosystems, branded content production and user experience design.</p>
     </div> 
     
-        <div class="paddingSpacing">
-        <section3 class="maps">
+        <section3>
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.2764679018733!2d101.67286061426293!3d3.0202217547751466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cdb53b0cac76cd%3A0x191f50721936648e!2sSubway%20Taman%20Puncak%20Jalil!5e0!3m2!1sen!2smy!4v1624377655469!5m2!1sen!2smy" width="1080" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
         </section3>
-        </div>
+
+    </div>
 
     </content>
 
 
     <!-------------- Testimonial --------------->
 
-    <div class="paddingSpacing">
+    <div class="testimonial">
+
+    <div class="mainTitle">
+        <h1>What our clients say about us?</h1>
+        <p>We specialise in enabling digital marketing ecosystems, branded content production and user experience design.</p>
+    </div> 
+
     <div class="lightSliderDiv2">
 
         <ul id="responsive2" class="cs-hidden">
@@ -511,11 +617,34 @@
         </ul>
 
     </div>    
-    </div> 
 
+    </div>
 
-
-
+    <div class="contactUs">
+        <div class="containerEmail">
+            <h2>Send any of your inquiry, we will build your idea</h2>
+            <form action="https://formspree.io/f/mbjqqlaz" method="POST" id="my-form">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name">
+                </div>
+                <div class="form-group">
+                    <label for="phoneNumber">Phone number</label>
+                    <input type="text" id="phoneNumber" name="phoneNumber">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="5"></textarea>
+                </div>
+                <button type="submit">Submit</button>
+                <div id="status"></div>
+            </form>
+        </div>
+    </div>
 
     <!-- ------------footer------------ -->
     
@@ -530,9 +659,6 @@
                         <li><a href="/help-and-information">Help</a></li>
                     </ul>
                 </div>
-                <div class="footer-col-2">
-                    <img src="images/Colourtagged_logo_white.svg"><p>Live with comfort.</p></img>
-                </div>
                 <div class="footer-col-3">
                     <a href="/news-and-activities"><h3>News and Activity</h3></a>
                     <ul>
@@ -541,109 +667,40 @@
                         <li><a href="/news-and-activities">Join Us</a></li>
                     </ul>
                 </div>
+                <div class="footer-col-2">
+                    <div class="footerCompanyLogo">
+                        <img src="/images/buttergunLogo.svg">
+                        <h3>Buttergun</h3>
+                    </div>
+                    <p>Civil contractor based in Bangi</p>
+                </div>
                 <div class="footer-col-4">
                     <h3>Social Account</h3>
                     <ul>
                         <li>
-                            <a href="https://www.facebook.com/colourtagged/"><img src="images/facebook3.png" width="50px" height="50px" style="background-color: white;"></img></a>
+                            <a href="https://www.facebook.com/colourtagged/"><img src="/images/facebookCircle.svg" width="50px" height="50px"></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/colourtagged"><img src="images/twitter3.png" width="50px" height="50px"></img></a>
+                            <a href="https://twitter.com/colourtagged"><img src="/images/twitterCircle.svg" width="50px" height="50px"></a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/colourtagged/"><img src="images/instagram3.png" width="50px" height="50px" style="background-color: white;"></img></a>
+                            <a href="https://www.instagram.com/colourtagged/"><img src="/images/instagramCircle.svg" width="50px" height="50px"></a>
                         </li>
                     </ul>
                 </div>
             </div>
             <hr>
-            <p class="copyright">Copyright 2021 - Buttergun Consortium<br>All Rights Reserved</p>
+            <p class="copyright">Copyright 2021 | Buttergun Consortium<br>All rights reserved</p>
         </div>
     </div>
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script> -->
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
-
-    <script>
-
-        let tl = gsap.timeline({
-            scrollTrigger: {
-                trigger: '.slider',
-                start: "bottom bottom",
-            }
-        });
-        tl.from(".slider", { scale: 0, opacity: 0, duration: 1});
-
-        let tl2 = gsap.timeline({
-            scrollTrigger: {
-                trigger: '.slider2',
-                start: "bottom bottom",
-            }
-        });
-        tl2.from(".slider2", { scale: 0, opacity: 0, duration: 1});
-
-        let tl3 = gsap.timeline({
-            scrollTrigger: {
-                trigger: '.mainTitle',
-                start: "bottom bottom",
-            }
-        });
-        tl3.from(".mainTitle", { x: -500, scale: 0, opacity: 0, duration: 1 });
-
-        let tl4 = gsap.timeline({
-            scrollTrigger: {
-                trigger: '.lightSliderDiv',
-                start: "top bottom",
-            }
-        });
-        tl4.from(".lightSliderDiv", { x: -300, scale: 0, opacity: 0, duration: 1 });
-
-        let tl5 = gsap.timeline({
-            scrollTrigger: {
-                trigger: '.lightSliderDiv2',
-                start: "top bottom"
-            }
-        });
-        tl5.from(".lightSliderDiv2", { scale: 0, opacity: 0, duration: 1 });
-
-        let tl6 = gsap.timeline({
-            scrollTrigger: {
-                trigger: '.maps',
-                start: "top bottom",
-            }
-        });
-        tl6.from(".maps", { scale: 0, opacity: 0, duration: 1 });
-
-        let tl7 = gsap.timeline({
-            scrollTrigger: {
-                trigger: '.backgroundSliderLeft',
-                start: "top bottom",
-            }
-        });
-        tl7.to(".backgroundSliderLeft", { x: "-100%", duration: 1.2, ease: Power2.easeInOut });
-
-        let tl8 = gsap.timeline({
-            scrollTrigger: {
-                trigger: '.backgroundSliderRight',
-                start: "top bottom",
-            }
-        });
-        tl8.to(".backgroundSliderRight", { x: "100%", duration: 1.2, ease: Power2.easeInOut });
-
-        gsap.from(".mainTitle1", {
-            scrollTrigger: {
-                trigger: '.mainTitle1',
-                start: "top center",
-            },
-            x: -1000
-        });
-
-    </script>
 
     <script src="/main.js"></script>
 
 </body>
+
 </html>
