--- a/public/styles.css
+++ b/public/styles.css
@@ -89,7 +89,7 @@ a {
     border: 2px;
     border-color:#ff4040;
     border-style: solid;
-    padding: 7px;
+    padding: 5px;
     border-radius: 6px;
     cursor: pointer;
     transition: background 0.5s, color .5s;
@@ -99,39 +99,6 @@ a {
 #topButton:hover {
     background: #ff4040;
     color: white;
-}
-
-/* .backgroundSlider {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 800vh;
-    background: #2e313b;
-    z-index: -2;
-} */
-
-/* .backgroundSlider2 {
-    position: absolute;
-    top: 100vh;
-    left: 0;
-    width: 100%;
-    height: 500vh;
-    background: #1d2129;
-    z-index: -1;
-} */
-
-.banner1 {
-    top: 100vh;
-    left: 50%;
-    transform: translateX(-50%);
-    position: absolute;
-    width: 100%;
-    max-width: 1500px;
-    height: 200vh;
-    background-color: #2e313b;
-    /* background: linear-gradient(to left, rgb(48, 48, 48), rgb(82, 82, 82)); */
-    z-index: 1;
 }
 
 section {
@@ -156,11 +123,6 @@ section2 {
     /* align-items: center; */
     position: relative;
 }
-
-/* h4 {
-    color: #555;
-    font-weight: normal;
-  } */
 
   .headline2 p {
       color: white;
@@ -211,260 +173,16 @@ section2 {
     color: #8a8a8a;
 }
 
-/* content { */
-    /* margin-top: 50vh; */
-    /* padding: 0; */
-    /* display: flex; */
-    /* justify-content: center; */
-    /* background: #23E3C9; */
-/* } */
-
-/* .paddingSpacing {
-    padding-right: 25px;
-    padding-left: 25px;
-} */
-
-.slider{
-    /* margin-right: 10vh; */
-    z-index: 3;
-    max-width: 1280px;
-    /* height: auto; */
-    /* border-radius: 10px; */
-    overflow: hidden;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-}
-
-.slides{
-    width: 500%;
-    height: 500px;
-    display: flex;
-}
-
-.slides input{
-    display: none;
-}
-
-/* .slide first {
-    position: relative;
-} */
-
-.slide{
-    width: 20%;
-    transition: 2s;
-}
-
-.slide img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    vertical-align: middle;
-
-}
-
-.navigation-manual{
-    position: absolute;
-    width: 1280px;
-    margin-top: -40px;
-    display: flex;
-    justify-content: center;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.manual-btn{
-    border:2px solid #2e313b;
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-
-.manual-btn:not(:last-child){
-    margin-right: 40px;
-}
-
-.manual-btn:hover{
-    background: #2e313b;
-}
-
-#radio1:checked ~ .first{
-    margin-left: 0;
-}
-
-#radio2:checked ~ .first{
-    margin-left: -20%;
-}
-
-#radio3:checked ~ .first{
-    margin-left: -40%;
-}
-
-#radio4:checked ~ .first{
-    margin-left: -60%;
-}
-
-.navigation-auto{
-    position:absolute;
-    display: flex;
-    width: 1280px;
-    justify-content: center;
-    margin-top: 460px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.navigation-auto div{
-    border: 2px solid #2e313b;
-    padding: 5px;
-    border-radius: 10px;
-    transition: 1s;
-}
-
-.navigation-auto div:not(:last-child){
-    margin-right: 40px;
-}
-
-#radio1:checked ~ .navigation-auto .auto-btn1{
-    background: #2e313b;
-}
-
-#radio2:checked ~ .navigation-auto .auto-btn2{
-    background: #2e313b;
-}
-
-#radio3:checked ~ .navigation-auto .auto-btn3{
-    background: #2e313b;
-}
-
-#radio4:checked ~ .navigation-auto .auto-btn4{
-    background: #2e313b;
-}
-
-/* SECOND SLIDER------------------------------------- */
-
-.slider2{
-    /* margin-right: 10vh; */
-    z-index: 3;
-    max-width: 1280px;
-    /* height: auto; */
-    /* border-radius: 10px; */
-    overflow: hidden;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-}
-
-.slides2{
-    width: 500%;
-    height: 500px;
-    display: flex;
-}
-
-.slides2 input{
-    display: none;
-}
-
-/* .slide first {
-    position: relative;
-} */
-
-.slide2{
-    width: 20%;
-    transition: 2s;
-}
-
-.slide2 img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    vertical-align: middle;
-}
-
-.navigation-manual2{
-    position: absolute;
-    width: 1280px;
-    margin-top: -40px;
-    display: flex;
-    justify-content: center;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.manual-btn2{
-    border:2px solid #2e313b;
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-
-.manual-btn2:not(:last-child){
-    margin-right: 40px;
-}
-
-.manual-btn2:hover{
-    background: #2e313b;
-}
-
-#radioTwo1:checked ~ .first2{
-    margin-left: 0;
-}
-
-#radioTwo2:checked ~ .first2{
-    margin-left: -20%;
-}
-
-#radioTwo3:checked ~ .first2{
-    margin-left: -40%;
-}
-
-#radioTwo4:checked ~ .first2{
-    margin-left: -60%;
-}
-
-.navigation-auto2{
-    position:absolute;
-    display: flex;
-    width: 1280px;
-    justify-content: center;
-    margin-top: 460px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.navigation-auto2 div{
-    border: 2px solid #2e313b;
-    padding: 5px;
-    border-radius: 10px;
-    transition: 1s;
-}
-
-.navigation-auto2 div:not(:last-child){
-    margin-right: 40px;
-}
-
-#radioTwo1:checked ~ .navigation-auto2 .auto-btnTwo1{
-    background: #2e313b;
-}
-
-#radioTwo2:checked ~ .navigation-auto2 .auto-btnTwo2{
-    background: #2e313b;
-}
-
-#radioTwo3:checked ~ .navigation-auto2 .auto-btnTwo3{
-    background: #2e313b;
-}
-
-#radioTwo4:checked ~ .navigation-auto2 .auto-btnTwo4{
-    background: #2e313b;
-}
-
 /* THIRD SLIDER------------------------------------- */
+
+.slider3ContainerOutside {
+    height: 800px;
+}
 
 .slider3Container {
     height: 800px;
+    position: relative;
+    overflow: hidden;
 }
 
 .slider3{
@@ -495,7 +213,6 @@ section2 {
 .slide3{
     width: 20%;
     transition: 2s;
-    position: relative;
 }
 
 .slide3 img{
@@ -692,7 +409,7 @@ section2 {
     letter-spacing: 0.5px;
 }
 
-  button {
+#sliderButton {
     margin: 30px 0;
     display: inline-block;
     cursor: pointer;
@@ -720,7 +437,7 @@ section2 {
     }
 }
   
-  button:hover {
+#sliderButton:hover {
     background: #a92c2c;
   }
 
@@ -749,8 +466,8 @@ section2 {
 
     @keyframes drop {
       0%{opacity: 0}
-      70%{transform: translateY(17vh)}
-      100%{transform: translateY(15vh); opacity: 1;}
+      70%{transform: translateY(7vh)}
+      100%{transform: translateY(5vh); opacity: 1;}
     }
   
   .modal-header {
@@ -1135,6 +852,10 @@ button[type="submit"]:hover {
         height: 500px;
     }
 
+    .slider3ContainerOutside {
+        height: 500px;
+    }
+
     .headline2 h1 {
         font-size: 50px;
     }
@@ -1179,121 +900,49 @@ button[type="submit"]:hover {
       cursor: pointer;
       z-index: 10;
     }
-    .hero6 img {
-        width: 100vw;
-        height: 90vh;
-        object-fit: cover;
-    }
     content {
         margin-right: 0;
         width: 100%;
         height: auto;
         overflow-x: hidden;
     }
-    .slider{
-        max-width: 100vw;
-        height: auto;
-        object-fit: cover;
-        overflow-x: hidden;
-    }
-    .navigation-manual {
-        max-width: 100vw;
-        height: auto;
-    }
-    .navigation-auto {
-        max-width: 100vw;
-        height: auto;
-    }
     .headline2 h1 {
         margin-bottom: 25px;
         font-size: 40px;
     }
-
     .mainTitle h1 {
         font-size: 30px;
     }
-
     .headline2 {
         top: 50%;
         max-width: 100vw;
         left: 40%;
+        overflow: hidden;
     }
-
     .headline2 p {
         margin-bottom: 5px;
     }
-
-    #nextBtn {
-        left: 70%;
-    }
-
-    .slider{
-        height: 300px;
-    }
-    
-    .slide img{
-        height: 300px;
-    }
-
-    .slides{
-        height: 300px;
-    }
-    
-    .navigation-manual {
-        max-height: 300px;
-        margin-top: -40px;
-    }
-    
-    .navigation-auto {
-        max-height: 300px;
-        margin-top: 260px;
-
-    }
-    .slider2{
-        height: 300px;
-    }
-    
-    .slide2 img{
-        height: 300px;
-    }
-
-    .slides2{
-        height: 300px;
-    }
-    
-    .navigation-manual2 {
-        max-height: 300px;
-        margin-top: -40px;
-    }
-    
-    .navigation-auto2 {
-        max-height: 300px;
-        margin-top: 260px;
-    }
-
     .slider3{
         height: 450px;
     }
-    
     .slide3 img{
         height: 450px;
     }
-
     .slides3{
         height: 450px;
     }
-    
     .navigation-manual3 {
         max-height: 450px;
         margin-top: -40px;
     }
-    
     .navigation-auto3 {
         max-height: 450px;
         margin-top: 410px;
     }
-
     .slider3Container {
+        height: 450px;
+    }
+    .slider3ContainerOutside {
         height: 450px;
     }
 }
