--- a/views/index.hbs
+++ b/views/index.hbs
@@ -45,11 +45,7 @@
         </div>
 
     <header>
-
-        {{!-- <div class="backgroundSlider"></div> --}}
-
-        {{!-- <div class="backgroundSlider2"></div> --}}
-
+        <div class="slider3ContainerOutside">
         <div class="slider3Container">
         <div class="slider3">
             <div class="textPosition">
@@ -63,9 +59,9 @@
                 <div class="slide3 first3">
                     <img src="/images/8.jpg" alt="">
                     <div class="headline2">
-                            <h1>Create your dream</h1>
-                            <p>We are Buttergun Consortium. We build houses and run civil construction projects. We are a trusted contractor with skills, supplies, and talents. Let us turn your dream projects into reality. </p>
-                            <button class="modal-open" data-modal="modal1">Get free quote now &#8658;</button>
+                        <h1>Create your dream</h1>
+                        <p>We are Buttergun Consortium. We build houses and run civil construction projects. We are a trusted contractor with skills, supplies, and talents. Let us turn your dream projects into reality. </p>
+                        <button class="modal-open" data-modal="modal1" id="sliderButton">Get free quote now &#8658;</button>
                     </div>
                 </div>
                 <div class="slide3">
@@ -95,6 +91,7 @@
             </div>
     
     
+        </div>
         </div>
         </div>
         </div>
@@ -161,7 +158,7 @@
 
 </div>
 
-    </header>
+</header>
 
     <content>
 
@@ -170,10 +167,6 @@
             <p>We specialise in enabling digital marketing ecosystems, branded content production and user experience design.</p>
         </div> 
 
-    {{!-- <div class="backgroundSliderDiv">
-        <div class="backgroundSliderLeft"></div>
-        <div class="backgroundSliderRight"></div>
-    </div> --}}
 
     <div class="small-container">
 
@@ -285,62 +278,6 @@
 
     </div>
 
-        
-        {{!-- <div class="slider">
-            <div class="slides">
-    
-                <input type="radio" name="radio-btn" id="radio1">
-                <input type="radio" name="radio-btn" id="radio2">
-                <input type="radio" name="radio-btn" id="radio3">
-                <input type="radio" name="radio-btn" id="radio4">
-    
-                <div class="slide first">
-                    <img src="/images/7.jpg" alt="">
-                    <div class="headline3">
-                        <h1>Glass installation</h1>
-                        <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
-                    </div>
-                </div>
-                <div class="slide">
-                    <img src="/images/8.jpg" alt="">
-                    <div class="headline3">
-                        <h1>Inspiring</h1>
-                        <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
-                    </div>
-                </div>
-                <div class="slide">
-                    <img src="/images/9.jpg" alt="">
-                    <div class="headline3">
-                        <h1>Inspiring</h1>
-                        <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
-                    </div>
-                </div>
-                <div class="slide">
-                    <img src="/images/11.jpg" alt="">
-                    <div class="headline3">
-                        <h1>Inspiring</h1>
-                        <p>Together we offer apparel, design and services, that enable people to be inspired and to express their own personal style, making it easier to live in a more circular way.</p>
-                    </div>
-                </div>
-    
-                <div class="navigation-auto">
-                    <div class="auto-btn1"></div>
-                    <div class="auto-btn2"></div>
-                    <div class="auto-btn3"></div>
-                    <div class="auto-btn4"></div>
-                </div>
-    
-            </div>
-            
-            <div class="navigation-manual">
-                <label for="radio1" class="manual-btn"></label>
-                <label for="radio2" class="manual-btn"></label>
-                <label for="radio3" class="manual-btn"></label>
-                <label for="radio4" class="manual-btn"></label>
-            </div>
-    
-    
-        </div> --}}
 
         <div class="ourVision">
 
@@ -400,46 +337,6 @@
 
     </div>
         
-
-        {{!-- <div class="slider2">
-            <div class="slides2">
-    
-                <input type="radio" name="radio-btn2" id="radioTwo1">
-                <input type="radio" name="radio-btn2" id="radioTwo2">
-                <input type="radio" name="radio-btn2" id="radioTwo3">
-                <input type="radio" name="radio-btn2" id="radioTwo4">
-    
-                <div class="slide2 first2">
-                    <img src="/images/7.jpg" alt="">
-                </div>
-                <div class="slide2">
-                    <img src="/images/8.jpg" alt="">
-                </div>
-                <div class="slide2">
-                    <img src="/images/9.jpg" alt="">
-                </div>
-                <div class="slide2">
-                    <img src="/images/11.jpg" alt="">
-                </div>
-    
-                <div class="navigation-auto2">
-                    <div class="auto-btnTwo1"></div>
-                    <div class="auto-btnTwo2"></div>
-                    <div class="auto-btnTwo3"></div>
-                    <div class="auto-btnTwo4"></div>
-                </div>
-    
-            </div>
-            
-            <div class="navigation-manual2">
-                <label for="radioTwo1" class="manual-btn2"></label>
-                <label for="radioTwo2" class="manual-btn2"></label>
-                <label for="radioTwo3" class="manual-btn2"></label>
-                <label for="radioTwo4" class="manual-btn2"></label>
-            </div>
-    
-    
-        </div> --}}
 
 {{!-- light slider start--------------------------------------- --}}
 
@@ -694,8 +591,6 @@
         </div>
     </div>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 
