Form modal fixed

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -57,21 +57,21 @@
                 <input type="radio" name="radio-btn3" id="radioThree4">
     
                 <div class="slide3 first3">
-                    <img src="/images/8.jpg" alt="">
+                    <img src="/images/8edited.jpg" alt="">
                     <div class="headline2">
                         <h1>Create your dream</h1>
-                        <p>We are Buttergun Consortium. We build houses and run civil construction projects. We are a trusted contractor with skills, supplies, and talents. Let us turn your dream projects into reality. </p>
+                        <p>We are Buttergun Consortium. We build houses and run civil construction projects. We are a trusted contractor with skills, supplies, and talents. Let us turn your dream projects into reality.</p>
                         <button class="modal-open" data-modal="modal1" id="sliderButton">Get free quote now &#8658;</button>
                     </div>
                 </div>
                 <div class="slide3">
-                    <img src="/images/1.jpg" alt="">
+                    <img src="/images/5edited.jpg" alt="">
                 </div>
                 <div class="slide3">
-                    <img src="/images/5.jpg" alt="">
+                    <img src="/images/1edited.jpg" alt="">
                 </div>
                 <div class="slide3">
-                    <img src="/images/2.jpg" alt="">
+                    <img src="/images/4edited.jpg" alt="">
                 </div>
     
                 <div class="navigation-auto3">
@@ -101,10 +101,10 @@
                     <div class="modal-content">
 
                             <div class="containerEmail2">
-                                <div class="closebuttonposition">
+                                <div class="modal-header">
                                     <button class="icon modal-close"><i class="material-icons">close</i></button>
                                 </div>
-                                <h2>Send any of your inquiry, we will build your idea</h2>
+                                <h2>Send us your inquiry, we will build your idea</h2>
                                 <form action="https://formspree.io/f/mbjqqlaz" method="POST" id="my-form">
                                     <div class="form-group">
                                         <label for="name">Name</label>
@@ -517,7 +517,42 @@
 
     </div>
 
-    <div class="contactUs">
+    <div class="buildWithUs">
+        <div class="mainTitle">
+            <h1>Let us be part of your dream project</h1>
+            <p>We specialise in enabling digital marketing ecosystems, branded content production and user experience design.</p>
+        </div>
+        <div class="small-container">
+            <div class="rowTop">
+                <div class="colTop">
+                    <img src="/images/location_on_red.svg">
+                    <div class="textContent">
+                        <h4>Our Location</h4>
+                        <p>Bangi, Selangor, Malaysia</p>
+                    </div>
+                </div>
+                <div class="colTop">
+                    <img src="/images/schedule_red.svg">
+                    <div class="textContent">
+                        <h4>Business Hours</h4>
+                        <p>Monday to Friday: 9:00AM to 6:00PM</p>
+                    </div>
+                </div>
+                <div class="colTop">
+                    <img src="/images/support_agent_red.svg">
+                    <div class="textContent">
+                        <h4>Contact Us</h4>
+                        <p>+60192772060</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bottomButton">
+            <button class="modal-open" data-modal="modal1" id="bottomButton">Get free quote now &#8658;</button>
+        </div>
+    </div>
+
+    {{!-- <div class="contactUs">
         <div class="containerEmail">
             <h2>Send any of your inquiry, we will build your idea</h2>
             <form action="https://formspree.io/f/mbjqqlaz" method="POST" id="my-form">
@@ -541,7 +576,7 @@
                 <div id="status"></div>
             </form>
         </div>
-    </div>
+    </div> --}}
 
     <!-- ------------footer------------ -->
     
@@ -569,7 +604,7 @@
                         <img src="/images/buttergunLogo.svg">
                         <h3>Buttergun</h3>
                     </div>
-                    <p>Civil contractor based in Bangi</p>
+                    <p>Create your dream</p>
                 </div>
                 <div class="footer-col-4">
                     <h3>Social Account</h3>
