--- a/public/styles.css
+++ b/public/styles.css
@@ -181,7 +181,6 @@ section2 {
 
 .slider3Container {
     height: 800px;
-    position: relative;
     overflow: hidden;
 }
 
@@ -194,6 +193,7 @@ section2 {
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
 }
 
 .slides3{
@@ -215,7 +215,7 @@ section2 {
     transition: 2s;
 }
 
-.slide3 img{
+.slide3 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -233,7 +233,7 @@ section2 {
 }
 
 .manual-btn3{
-    border:2px solid #2e313b;
+    border:2px solid rgba(0,0,0,0.5);
     padding: 5px;
     border-radius: 10px;
     cursor: pointer;
@@ -245,7 +245,7 @@ section2 {
 }
 
 .manual-btn3:hover{
-    background: #2e313b;
+    background: lightgray;
 }
 
 #radioThree1:checked ~ .first3{
@@ -275,7 +275,7 @@ section2 {
 }
 
 .navigation-auto3 div{
-    border: 2px solid #2e313b;
+    border: 2px solid lightgray;
     padding: 5px;
     border-radius: 10px;
     transition: 1s;
@@ -286,19 +286,19 @@ section2 {
 }
 
 #radioThree1:checked ~ .navigation-auto3 .auto-btnThree1{
-    background: #2e313b;
+    background: lightgray;
 }
 
 #radioThree2:checked ~ .navigation-auto3 .auto-btnThree2{
-    background: #2e313b;
+    background: lightgray;
 }
 
 #radioThree3:checked ~ .navigation-auto3 .auto-btnThree3{
-    background: #2e313b;
+    background: lightgray;
 }
 
 #radioThree4:checked ~ .navigation-auto3 .auto-btnThree4{
-    background: #2e313b;
+    background: lightgray;
 }
 
 /* Carousel start here---------------------------- */
@@ -409,6 +409,26 @@ section2 {
     letter-spacing: 0.5px;
 }
 
+.bottomButton {
+    text-align: center;
+}
+
+#bottomButton {
+    cursor: pointer;
+    background: #ff4040;
+    color: white;
+    transition: background 0.5s;
+    padding: 8px 16px;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+}
+
+#bottomButton:hover {
+    background: #a92c2c;
+}
+
 #sliderButton {
     margin: 30px 0;
     display: inline-block;
@@ -421,7 +441,7 @@ section2 {
     border: none;
     outline: none;
     animation: moveup 2.5s ease-in-out forwards;
-  }
+}
 
 @keyframes moveup {
     0% {
@@ -439,7 +459,7 @@ section2 {
   
 #sliderButton:hover {
     background: #a92c2c;
-  }
+}
 
   .modal {
     position: fixed;
@@ -466,8 +486,8 @@ section2 {
 
     @keyframes drop {
       0%{opacity: 0}
-      70%{transform: translateY(7vh)}
-      100%{transform: translateY(5vh); opacity: 1;}
+      70%{transform: translateY(10vh)}
+      100%{transform: translateY(8vh); opacity: 1;}
     }
   
   .modal-header {
@@ -476,7 +496,7 @@ section2 {
   }
 
   .modal-header .modal-close {
-    position: absolute;
+    margin-top: 10px;
     cursor: pointer;
     color: #ff523b;
     /* float: right; */
@@ -484,7 +504,9 @@ section2 {
     background: #efefef;
     border: 0;
     outline: 0;
-    padding: 5px 8px;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
     transition: background 0.5s;
   }
   
@@ -720,7 +742,7 @@ section2 {
     /* flex-direction: column; */
 }
 
-.containerEmail {
+/* .containerEmail {
     margin-top: 15px;
     position: absolute;
     width: 90%;
@@ -733,9 +755,9 @@ section2 {
 }
 
 .containerEmail h2 {
-    margin-top: 10px;
+    margin-top: 30px;
     margin-bottom: 10px;
-}
+} */
 
 .containerEmail2 {
     margin-left: auto;
@@ -747,11 +769,12 @@ section2 {
     box-shadow: 0px 0px 2px white;
     max-width: 500px;
     z-index: 1;
+    border-radius: 10px;
 }
 
 .containerEmail2 h2 {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 .form-group {
@@ -781,6 +804,7 @@ button[type="submit"] {
     padding: 10px;
     border-radius: 8px;
     margin-top: 10px;
+    margin-bottom: 30px;
     color: white;
     background-color: #ff4040;
     font-size: 14px;
@@ -830,7 +854,7 @@ button[type="submit"]:hover {
         height: 500px;
     }
     
-    .slide3 img{
+    .slide3 img.responsive{
         height: 500px;
     }
 
@@ -925,7 +949,7 @@ button[type="submit"]:hover {
     .slider3{
         height: 450px;
     }
-    .slide3 img{
+    .slide3 img.reponsive{
         height: 450px;
     }
     .slides3{
@@ -944,5 +968,11 @@ button[type="submit"]:hover {
     }
     .slider3ContainerOutside {
         height: 450px;
+    }
+    .manual-btn3:not(:last-child){
+        margin-right: 20px;
+    }
+    .navigation-auto3 div:not(:last-child){
+        margin-right: 20px;
     }
 }
