--- a/views/index.hbs
+++ b/views/index.hbs
@@ -520,29 +520,29 @@
     <div class="buildWithUs">
         <div class="mainTitle">
             <h1>Let us be part of your dream project</h1>
-            <p>We specialise in enabling digital marketing ecosystems, branded content production and user experience design.</p>
+            <p>Why us? We put our process of development with very detailed planning, high efficienty of execution, and after service monitoring.</p>
         </div>
         <div class="small-container">
-            <div class="rowTop">
-                <div class="colTop">
-                    <img src="/images/location_on_red.svg">
-                    <div class="textContent">
-                        <h4>Our Location</h4>
-                        <p>Bangi, Selangor, Malaysia</p>
+            <div class="rowTop2">
+                <div class="colTop2">
+                    <img src="/images/receipt_long_red_24dp.svg">
+                    <div class="textContent2">
+                        <h4>1. Planning</h4>
+                        <p>We initiate, set objective and formulating plan to accomplish the project.</p>
                     </div>
                 </div>
-                <div class="colTop">
-                    <img src="/images/schedule_red.svg">
-                    <div class="textContent">
-                        <h4>Business Hours</h4>
-                        <p>Monday to Friday: 9:00AM to 6:00PM</p>
+                <div class="colTop2">
+                    <img src="/images/construction_red_24dp.svg">
+                    <div class="textContent2">
+                        <h4>2. Developing</h4>
+                        <p>We execute the plan accordingly with high efficiency and excellent quality.</p>
                     </div>
                 </div>
-                <div class="colTop">
-                    <img src="/images/support_agent_red.svg">
-                    <div class="textContent">
-                        <h4>Contact Us</h4>
-                        <p>+60192772060</p>
+                <div class="colTop2">
+                    <img src="/images/content_paste_search_red_24dp.svg">
+                    <div class="textContent2">
+                        <h4>3. Monitoring</h4>
+                        <p>We monitor the completed project to ensure our client's satisfaction.</p>
                     </div>
                 </div>
             </div>
