Text typing animation

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -60,7 +60,9 @@
                     <img src="/images/8edited.jpg" alt="">
                     <div class="headline2">
                         <h1>Create your dream</h1>
-                        <p>We are Buttergun Consortium. We build houses and run civil construction projects. We are a trusted contractor with skills, supplies, and talents. Let us turn your dream projects into reality.</p>
+                        <div class="typing">
+                            {{!-- <p>We are Buttergun Consortium. We build houses and run civil construction projects. We are a trusted contractor with skills, supplies, and talents. Let us turn your dream projects into reality.</p> --}}
+                        </div>    
                         <button class="modal-open" data-modal="modal1" id="sliderButton">Get free quote now &#8658;</button>
                     </div>
                 </div>
