--- a/public/styles.css
+++ b/public/styles.css
@@ -17,9 +17,9 @@ body {
 } */
 
 .container_logo {
-    margin-left: -200px;
-    animation: moveright .5s ease-in-out forwards;
-    animation-delay: 2s;
+    /* margin-left: -200px; */
+    /* animation: moveright .5s ease-in-out forwards; */
+    /* animation-delay: 2s; */
     display: flex;
     align-items: center;
 }
@@ -33,14 +33,14 @@ body {
     color: lightgray;
 }
   
-@keyframes moveright {
+/* @keyframes moveright {
     0% {
       transform: translateX(0);
     }
     100% {
       transform: translateX(200px);
     }
-}
+} */
 
 .menu-icon {
     width: 28px;
@@ -151,6 +151,28 @@ section2 {
     top: 0;
     width: 80vw;
     z-index: 3;
+}
+
+.typing {
+    position: relative;
+}
+
+.typing:after {
+    content: "";
+    position: absolute;
+    border-right: 2px solid white;
+    height: 20px;
+    width: 1px;
+    animation: blink 0.5s infinite ease;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 /* content--------------------------------------------- */
@@ -441,7 +463,7 @@ section2 {
     border-radius: 6px;
     border: none;
     outline: none;
-    animation: moveup 2.5s ease-in-out forwards;
+    animation: moveup 1.6s ease-out forwards;
 }
 
 @keyframes moveup {
@@ -699,16 +721,17 @@ section2 {
     display: flex;
     background: #f3f1f0;
     max-width: 400px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     border-radius: 5px;
     padding: 15px;
     transition: background 0.5s;
     margin-left: 5px;
     margin-right: 5px;
+    box-shadow: 0 5px 10px 5px rgba(0, 0, 0, 0.3);
 }
 
 .colTop2:hover {
-    background: lightgray;
+    background: white;
 }
 
 .textContent2 {
